add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-      <title>Julien's Website</title>
+      <title>Julien's Glorious Website</title>
       <link rel="stylesheet" href="style.css">
     </head>
 
@@ -11,10 +11,10 @@
           <h1>Julien's Glorious Website</h1>
     <ul id="nav-ul">
         <li class="nav-li">
-          <a href="index.html"> Home </a>
+          <a href="index.html">Home</a>
         </li>
         <li class="nav-li">
-          <a href="portfolio.html"> Portfolio </a>
+          <a href="portfolio.html">Portfolio</a>
         </li>
     </ul>
         </nav>
