--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -62,8 +62,8 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
+			var positionX = 0;
+			var points = 0;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -71,8 +71,10 @@
 			turn it around! 
 			*/
 			function update() {
-				
-
+			/* Your Code to Increase positionX by 10 HERE */
+				positionX = positionX + 10
+				moveBoxTo(positionX);
+		
 			};
 
 			/* 
@@ -81,8 +83,8 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
+				positionX = 0;
+				changeBoxText = points + 1;
 
 			};
 		})();
