add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -64,6 +64,7 @@
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
 			var points = 0;
+			var speed = 10;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -71,9 +72,16 @@
 			turn it around! 
 			*/
 			function update() {
-			/* Your Code to Increase positionX by 10 HERE */
-				positionX = positionX + 10
 				moveBoxTo(positionX);
+				if (positionX > boardWidth) {
+					speed = speed - 3
+				}
+				if (positionX < 0) {
+					speed = speed + 3
+				}
+			/* Your Code to Increase positionX by 10 HERE */
+			positionX = positionX + speed
+				
 		
 			};
 
@@ -83,8 +91,10 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = 0;
-				changeBoxText = points + 1;
+				if (positionX = 0);
+				changeBoxText(points);
+			    points = points + 1
+				speed = speed + 3 
 
 			};
 		})();
