--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -94,8 +94,14 @@
 				if (positionX = 0);
 				changeBoxText(points);
 			    points = points + 1
-				speed = speed + 3 
-
+				speed = speed + 3
+				
+				if (speed > 1){
+					speed = speed + 1
+				}
+				else if (speed < 1)
+					speed = speed - 1
+				
 			};
 		})();
 	</script>
