--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -75,7 +75,7 @@
 				positionX = positionX + speed
 				moveBoxTo(positionX);
 				if (positionX > boardWidth) {
-					speed = speed - 3
+					speed = -speed;
 				}
 				if (positionX < 0) {
 					speed = speed + 3
