--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -78,7 +78,7 @@
 					speed = -speed;
 				}
 				if (positionX < 0) {
-					speed = speed + 3
+					speed = speed + 3;
 				}
 
 			
@@ -99,10 +99,10 @@
 				changeBoxText(points);
 				
 				if (speed > 0) {
-					speed = speed + 3
+					speed = speed + 3;
 				}
 				else if (speed < 0)
-					speed = speed - 3
+					speed = speed - 3;
 				
 			};
 		})();
